statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-database
  template:
    metadata:
      labels:
        app: app-database
    spec:
      containers:
        - name: dbcont2
          image: bpranay/php:db
          ports:
            - containerPort: 3306
         
         #secret integration
          resources:
            requests:
              memory: "120Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"

          volumeMounts:
            - name: PVC-1
              mountPath: /var/lib/mysql
              
      volumeClaimtemplates:
        - metadata:
            name: PVC-1
          spec:
            accessModes:
              - ReadWriteOnce
            resources:
              requests:
                storage: 2Gi
